deploy a server after selection confirmation on frontend

--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -96,7 +96,7 @@
 			<h3>CccP - Cloud cost control Platform</h3>  
 			
 			
-			<p>Do you know what it will cost you each moth to deploy to the Cloud? 
+			<p>Do you know what it will cost you each month to deploy to the Cloud? 
 			One of the most frustrating and complex parts about the cloud is not how you get stuff running, it’s trying to figure out how much that will cost once you do get it running. 
 			With Tenbrains CccP, you no longer need to worry about that. You simply input what your expected monthly budget and Tenbrain takes care of the rest. 
 			Tenbrains CccP will automatically select the most competitive Cloud provider to deploy your infrastructure on. 
@@ -104,15 +104,12 @@
 			
 			<h3>TenStacks- Fully integrated Open Source Components.</h3>
 			
-			
 			<p>Deploying Open Source applications can be time consuming. 
 			There are options available to deploy open source applications encapsulated in a instance. 
 			But this still leaves you with a critical component missing when it comes to enterprise deployments and integration. 
 			With Tenstacks, you deploy complete infrastructure stacks that are 100% integrated and 100% Open Source!</p>
 			
 			<h3>TenAMP- Automation, Monitoring and Provisioning</h3>
-			
-			
 			
 			<p>Automated provisioning and management of both your private and public cloud infrastructure. 
 			TenAMP management capabilities let you designate user roles, assign provisioning rights and lock down users from deploying machines with a self-services portal that requires approval before someone is able to spin a instance up. 
