--- a/application/views/scripts/account/sign-in.phtml
+++ b/application/views/scripts/account/sign-in.phtml
@@ -35,17 +35,19 @@
 
 	<h3>Sign in with your account from:</h3>
 
-	<ul class="third_parties">
-		<li class="control third_party big facebook">
-			<a href="/account/facebook_connect" title="Sign In with Facebook" class="social">Facebook</a>		
-		</li>
-		<li class="control third_party big twitter">
-			<a href="/account/twitter_connect" title="Sign In with Twitter" class="social">Twitter</a>		
-		</li>
-		<li class="control third_party big google">
-			<a href="/account/google_connect" title="Sign In with Google" class="social">Google</a>
-		</li>
-	</ul>
+	<div id="third_party_big">
+		<ul class="third_parties">
+			<li class="control third_party big facebook">
+				<a href="/account/facebook_connect" title="Sign In with Facebook" class="social">Facebook</a>		
+			</li>
+			<li class="control third_party big twitter">
+				<a href="/account/twitter_connect" title="Sign In with Twitter" class="social">Twitter</a>		
+			</li>
+			<li class="control third_party big google">
+				<a href="/account/google_connect" title="Sign In with Google" class="social">Google</a>
+			</li>
+		</ul>
+	</div>
 
 	<div class="clearfix"></div>
 </div>
