--- a/application/views/scripts/account/sign-up.phtml
+++ b/application/views/scripts/account/sign-up.phtml
@@ -34,19 +34,21 @@
 	
 	<h3>Sign up with your account from:</h3>
 	
-	<ul class="third_parties">
-		<li class="control third_party big facebook">
-			<a href="/account/facebook_connect" title="Sign Up with Facebook" class="social">Facebook</a>		
-		</li>
-	
-		<li class="control third_party big twitter">
-			<a href="/account/twitter_connect" title="Sign Up with Twitter" class="social">Twitter</a>		
-		</li>
-	
-		<li class="control third_party big google">
-			<a href="/account/google_connect" title="Sign Up with Google" class="social">Google</a>		
-		</li>
-	</ul>
+	<div id="third_party_big">
+		<ul class="third_parties">
+			<li class="control third_party big facebook">
+				<a href="/account/facebook_connect" title="Sign Up with Facebook" class="social">Facebook</a>		
+			</li>
+		
+			<li class="control third_party big twitter">
+				<a href="/account/twitter_connect" title="Sign Up with Twitter" class="social">Twitter</a>		
+			</li>
+		
+			<li class="control third_party big google">
+				<a href="/account/google_connect" title="Sign Up with Google" class="social">Google</a>		
+			</li>
+		</ul>
+	</div>
 	
 	<div class="clearfix"></div>
 </div>
