style fixes multiple changes to console code - changed the way of creating grid panels to more extjs4-style, layout reworked

--- a/application/views/scripts/selection/results.phtml
+++ b/application/views/scripts/selection/results.phtml
@@ -1,6 +1,6 @@
 <div class="main small_content">
 	<p class="selection_message wide">You have selected:</p>
-	<div id="selections">
+	<div class="selections">
 		<ul>
 		<?php foreach($this->results as $class => $text): ?>
 			<li class="selected_item">
@@ -16,7 +16,7 @@
 
 	<div class="clearfix"></div>
 	
-	<div id="confirm_dialogue">
+	<div class="selections">
 		<ul>
 			<li>
 				<a class="control reject_button small" href="/">Change this</a>
