--- a/application/views/scripts/pay/index.phtml
+++ b/application/views/scripts/pay/index.phtml
@@ -1,6 +1,6 @@
 <div class="main small_content">
 	<p class="selection_message wide">Choose one of the options below:</p>
-	<div id="selections">
+	<div class="selections">
 		<ul>
 		<?php foreach($this->selections as $class => $data): ?>
 			<li>
