--- a/application/views/scripts/selection/deployment.phtml
+++ b/application/views/scripts/selection/deployment.phtml
@@ -1,6 +1,6 @@
 <div class="main small_content">
-	<p class="selection_message wide">Choose one of the options below:</p>
-	<div id="selections">
+	<p class="selection_message wide">Deploy up to 2 cloud servers for free!</p>
+	<div class="selections">
 		<ul>
 		<?php foreach($this->selections as $class => $data): ?>
 			<li>
