--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -71,6 +71,7 @@
 	<?php echo $lt->content ?>
 	
 	<div id="helper">
+		<div id="question">?</div>
 		<span class="help_header"><?php echo isset($lt->short_help_title) ? $lt->short_help_title : 'Tips' ?></span>
 		<span class="help_message"><?php echo isset($short_message) ? $short_message : "This is a sample text for a TenBrain help system. Mind it's size - do not put too much text here. If you want to add more help, use the one that dispays in a shaded box. That will be viewed when clicking here." ?></span>
 	</div>
