--- a/www/css/main.css
+++ b/www/css/main.css
@@ -17,15 +17,15 @@ html, body {
 	padding: 1em 4em;
 	font: 13px Verdana, Arial, Sans-serif;
 	color: gray;
-	background: #fff;
+	background: #f4f2f2 url('./images/top_shade.png') no-repeat center bottom;
 }
 
 #logo {
 	display: inline-block;
-	margin-top: 1.1em;
-	width: 256px;
-	height: 69px;
-	background: url('/css/images/logo1-19.png') no-repeat;
+	width: 268px;
+	height: 88px;
+	background: url('/css/images/logo_beta.png') no-repeat;
+/*	background: url('/css/images/logo1-19.png') no-repeat;*/
 	/* width: 243px;
 	height: 46px;
 	background: url('/css/images/logo2-19.png') no-repeat; */
@@ -36,8 +36,8 @@ html, body {
 
 #account_area {
 	position: absolute;
-	top: 2em;
-	right: 0;
+	top: 3em;
+	right: 4em;
 }
 
 #top_account_buttons {
@@ -68,8 +68,8 @@ html, body {
 	width: 200px;
 	padding: 10px;
 	padding-top: 20px;
-	/* background: #ECECEC; */
-	background: #25B4E8;
+/*	background: #25B4E8;*/
+	background: #3da6bc;
 	border: none;
 }
 
@@ -81,7 +81,7 @@ html, body {
 #sign_in {
 	float: right;
 	background: #fff;
-	color: #25B4E8;
+	color: #3da6bc;
 	opacity: 0.7;
 }
 #sign_in:hover {
@@ -107,12 +107,10 @@ html, body {
 #footer_icon_hider {
 	position: absolute;
 	z-index: 3;
-	bottom: 90px; left: 0; right: 0;
+	bottom: 120px; left: 0; right: 0;
 	width: auto;
 	height: 15px;
 	background: #fff;
-	border-bottom: 2px solid #6DCFF6;
-	/* border-bottom: 2px solid #C5D4D8; */
 }
 
 #footer {
@@ -122,16 +120,16 @@ html, body {
 	width: auto;
 	bottom: 0;
 	padding: 0 4em;
-	height: 90px;
-	font: 13px Verdana, Arial, Sans-serif;
-	background: #0893d6 url('/css/images/blue_footer.png') repeat-x;
+	height: 120px;
+	font: 12px Arial, Helvetica, sans-serif;
+	background: #3da6bc url('./images/bottom_shade.png') no-repeat center top;
 }
 
 #menu {
 	margin-top: 0.5em;
 	list-style-type: none;
-	font: 12px Arial, Helvetica, sans-serif;
 	line-height: 1.5em;
+	color: #a7dae5;
 }
 
 #menu ul {
@@ -144,10 +142,11 @@ html, body {
 }
 
 #menu .item {
-	padding: 0.2em 0 0 0.1em;
-	border-bottom: 1px dashed white;
 	color: white;
-	text-decoration: none;
+	text-decoration: underline;
+/*	padding: 0.2em 0 0 0.1em;*/
+/*	border-bottom: 1px dashed white;*/
+/*	text-decoration: none;*/
 }
 
 #copyright {
@@ -173,19 +172,19 @@ html, body {
 }
 
 .main {
-	background: #fff url('/css/images/gray_background.png') repeat-x;
-	border-top: 2px solid #C5D4D8;
-	padding-bottom: 107px;
+	background: #fff;
+	padding-bottom: 137px;
 }
-.main.small_content { padding-top: 5em; }
+.main.small_content { padding-top: 4em; }
 .main.big_content { padding-top: 1em; }
 
 .selection_message, .error_message {
 	text-align: center;
 	font: 24px Verdana, Arial, Sans-Serif;
 }
-.selection_message { color: #009CDC; }
-.selection_message.wide { margin: 0 0 1.5em; }
+/*.selection_message { color: #009CDC; }*/
+.selection_message { color: #3da6bc; }
+.selection_message.wide { margin: 0 0 0.5em; }
 .selection_message.narrow { margin: 0 0 1em; }
 .error_message { margin: 0 0 1em; color: red; }
 
@@ -250,6 +249,25 @@ html, body {
 	background-position: -178px -71px;
 }
 
+#info_space {
+	width: 550px;
+	height: 210px;
+	margin: 3em auto 1.5em;
+	padding: 15px;
+	border: 7px solid white;
+	background-color: #f4f2f2;
+	-webkit-box-shadow: 0 0 10px 1px #b1b1b1;
+	-moz-box-shadow: 0 0 10px 1px #b1b1b1;
+	box-shadow: 0 0 10px 1px #b1b1b1;
+	font-size: 13px;
+	overflow-y: auto;
+}
+
+#info_space img {
+	float: left;
+	margin-right: 1em;
+}
+
 .signed_in_controls {
 	margin: 0.5em 0;
 	text-align: center;
@@ -284,7 +302,6 @@ html, body {
 
 .underlined_dash {
 	color: #009CDC;
-	background: #fff;
 }
 
 .underlined_dash.blue {
@@ -293,7 +310,7 @@ html, body {
 }
 
 .login_submit {
-	background: #25B4E8;
+	background: #3da6bc;
 	color: #fff;
 	border: none;
 	font-weight: bold;
@@ -397,11 +414,23 @@ html, body {
 	right: 0; top: 240px;
 	width: 38px;
 	height: 36px;
-	background: #009CDC url('/css/images/helper.png') no-repeat right top;
-	opacity: 0.5;
+/*	background: #009CDC url('/css/images/helper.png') no-repeat right top;*/
+	background: #3da6bc;
+/*	opacity: 0.5;*/
 	color: white;
 	overflow: hidden;
 	cursor: pointer;
+}
+
+#question {
+	position: absolute;
+	z-index: 6;
+	top: 0; right: 0;
+	width: 30px;
+	height: 30px;
+	padding: 1px 4px 5px;
+	font: bold 30px Arial, Helvetica, sans-serif;
+	text-align: center;
 }
 
 #helper .help_header {
@@ -465,7 +494,7 @@ html, body {
 
 .help_title {
 	text-align: left;
-	color: #009CDC;
+	color: #3da6bc;
 	font-weight: bold;
 	display: block;
 	margin-bottom: 1em;
