--- a/application/views/scripts/pay/details.phtml
+++ b/application/views/scripts/pay/details.phtml
@@ -1,9 +1,12 @@
-<h2>Thanks for using Tenbrain</h2>
-
-<?php if ($this->details){?>
-	<div class="payment finished">Payment operation sucessfully finished !</div>
-	<div class="payment finished link"><a href="/console">Go to control panel.</a></div>
-<?php }else{?>
-	<div class="payment finished">Payment operation failed. Please check your credit card details and try again.</div>
-	<div class="payment finished link"><a href="/pay">Pay again.</a></div>
-<?php }?>
+<div class="main small_content">
+	<p class="selection_message wide">Thanks for using Tenbrain</p>
+	<div>
+		<?php if ($this->details){?>
+			<div class="payment finished">Payment operation sucessfully finished !</div>
+			<div class="payment finished link"><a href="/console">Go to control panel.</a></div>
+		<?php }else{?>
+			<div class="payment finished">Payment operation failed. Please check your credit card details and try again.</div>
+			<div class="payment finished link"><a href="/pay">Pay again.</a></div>
+		<?php }?>
+	</div>
+</div>
