--- a/application/views/scripts/pay/creditcard.phtml
+++ b/application/views/scripts/pay/creditcard.phtml
@@ -1,3 +1,16 @@
-<h3>Buy account</h3>
-<div align="center">Enter your credit card information</div>
-<?php echo $this->form;
+<div class="main small_content">
+	<p class="selection_message wide">Enter your credit card information</p>
+
+		<form action="" method="post" accept-charset="utf-8" >
+		<div class="payment container">
+
+			<div class="payment amount-field"><?php echo $this->form->cc_amount;?></div>
+			<div class="payment amount-field"><?php echo $this->form->number;?></div>
+			<div class="payment amount-field"><?php echo $this->form->type;?></div>
+			<div class="payment amount-field"><?php echo $this->form->month;?><?php echo $this->form->year;?></div>
+			<div class="payment amount-field"><?php echo $this->form->cvv2;?></div>
+
+			<?php echo $this->form->submit; ?>
+		</div>
+		</form>
+</div>
