Payments design fix.

--- a/application/views/scripts/pay/index.phtml
+++ b/application/views/scripts/pay/index.phtml
@@ -1,7 +1,7 @@
 <div class="main small_content">
 	<p class="selection_message wide">Choose one of the options below:</p>
 
-	<div id="selections" class="payment">
+	<div class="payment selections">
 		<ul>
 		<?php foreach($this->selections as $class => $data): ?>
 			<li>
