--- a/www/css/paypal.css
+++ b/www/css/paypal.css
@@ -26,6 +26,7 @@ form#payment ul.errors{
 .text.paypal {
 	display: block;
 	padding: 0.4em 0 0.2em 40px;
+	font-size:0.9em;
 }
 #month-element {
 	float: left;
