Layout and message changes of Payment forms.

--- a/application/views/scripts/pay/creditcard.phtml
+++ b/application/views/scripts/pay/creditcard.phtml
@@ -4,7 +4,7 @@
 		<form action="" method="post" accept-charset="utf-8" >
 		<div class="payment container">
 
-			<div class="payment amount-field"><?php echo $this->form->cc_amount;?></div>
+			<div class="payment amount-field"><?php echo $this->form->cc_amount;?><div class="field-descr">incl. $0.30 fixed and 2.9% fees</div></div>
 			<div class="payment amount-field"><?php echo $this->form->number;?></div>
 			<div class="payment amount-field"><?php echo $this->form->type;?></div>
 			<div class="payment amount-field"><?php echo $this->form->month;?><?php echo $this->form->year;?></div>
