--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -131,25 +131,31 @@
 			<li>
 				<ul>
 					<li>Products</li>
-					<li><a class="item" href="/">Pricing</a></li>
-					<li><a class="item" href="/">Learn more</a></li>
-					<li><a class="item" href="/">Features</a></li>
+					<li><a class="item" href="/products/pricing">Pricing</a></li>
+					<li><a class="item" href="/products/features">Features</a></li>
 				</ul>
 			</li>
 			<li>
 				<ul>
 					<li>Legal</li>
-					<li><a class="item" href="/">Terms of Service</a></li>
-					<li><a class="item" href="/">Privacy Policy</a></li>
-					<li><a class="item" href="/">Refund Policy</a></li>
+					<li><a class="item" href="/legal/terms">Terms of Service</a></li>
+					<li><a class="item" href="/legal/privacy">Privacy Policy</a></li>
+					<li><a class="item" href="/legal/refund">Refund Policy</a></li>
 				</ul>
 			</li>
 			<li>
 				<ul>
-					<li><a href="/"></a></li>
-					<li><a href="/"></a></li>
-					<li><a href="/"></a></li>
-					<li><a href="/"></a></li>
+					<li>Account</li>
+					<li><a class="item" href="/account/sign_up">Sign Up</a></li>
+					<li><a class="item" href="/account/sign_in">Login</a></li>
+				</ul>
+			</li>
+			<li>
+				<ul>
+					<li>Help</li>
+					<li><a class="item" href="/wiki">Wiki</a></li>
+					<li><a class="item" href="/support">Support</a></li>
+					<li><a class="item" href="/contact">Contact Us</a></li>
 				</ul>
 			</li>
 		</ul>
