--- a/application/views/scripts/misc/about.phtml
+++ b/application/views/scripts/misc/about.phtml
@@ -1,9 +1,31 @@
-<div class="main small_content">
+<div class="main big_content">
 	<span class="info_image info">Info</span>
-	<p class="selection_message narrow">About us</p>
-	<p class="explanation">
-		TenBrain is an online deployment and integration platform for Open Source and SaaS Applications
+	<h2 class="info_message">About us</h2>
+	<p class="content big">Tenbrain is an Open Source multi-cloud management and Cloud cost control Platform for developers, startups and small, medium and enterprise businesses.</p>
+	<br />
+	<h3 class="info_message">Team</h3>
+
+	<h4 class="logo_start">Matthew Long, President & CEO</h4>
+	<p class="content">
+		Tenbrain is led by Matthew Long, who has created and managed a series of successful new technology companies. Matthew founded Tenbrain in August, 2010,
+		Prior to Tenbrain, Matthew was involved with some the most successful deployments of HPC Grids within the NY and Chicago areas, garnering his desire to implement grid functionality for all businesses. Matthew holds a deep passion for open source technology, and has successfully mentored many companies in the cost benefits and transition to a OSIS service model.
+		With the advent of cloud computing, Matthew has made it his mission to assure companies have vendor choice and freedom as they make the move to the cloud.
+		Matthew holds a Masters of Science degree and a Bachelor of Science in Computer Science from the University Of Colorado.
 	</p>
-	
+
+	<h4 class="logo_start">Joseph Klein, CTO & Director Of Finance</h4>
+	<p class="content">
+		Joseph has more than 20 years of wireless communication, automotive, telematics and software development experience, including significant roles within several successful startup ventures.
+		Before joining Tenbrain, Joseph was most recently CIO at Clearview. At Clearview, he also held roles in general management, business operations, portfolio and product management, and finance.  For 12 years, Joseph worked in Clearview financial roles including North American Director of Finance, Clearview controller, financial planning and reporting manager, and Corporate auditor. Joseph joined Clearview in 1997 after working as a software programmer at Goldman Sachs starting in 1986.
+		Joseph holds a PhD in Physics from MIT and a Masters in Computer Science from the University of Chicago.
+	</p>
+
+	<h4 class="logo_start">Frank Clarkson, Marketing Director.</h4>
+	<p class="content">
+		Frank has 20 years experience in the telecommunications and enterprise software and systems business, and is currently responsible for Consulting Development and Delivery.
+		Prior to joining Tenbrain, Frank provided management and engineering consulting services for Advance Systems LLC in the areas of product and operational strategies and post acquisition integration.
+		Frank holds a Masters of Science degree and a Bachelor of Science in Electrical Engineering  from California State University.
+	</p>
+
 	<div class="clearfix"></div>
 </div>
