--- a/application/views/scripts/selection/deployment.phtml
+++ b/application/views/scripts/selection/deployment.phtml
@@ -17,8 +17,9 @@
 	<div class="clearfix"></div>
 
 	<div id="info_space">
-		<img src="/css/images/sample.jpg" />
-		Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+		<img src="/css/images/logo_big.png" />
+		<h4>What is Tenbrain?</h4>
+		With Tenbrain,  you can automate the cost of running your infrastructure across multiple clouds providers.  Tenbrain fully manages scaling, monitoring, logging and all aspects of your cloud infrastructure. With Tenbrain, you’ll never have to bang your head trying to figure out the cost of running your infrastructure in the cloud. It’s as simple as entering your IT budget, type of infrastructure and providers you wish to use. And with flexible payment options for any size company, you can- Save your Brain, While saving Money!
 	</div>
 
 </div>
