--- a/www/css/main.css
+++ b/www/css/main.css
@@ -125,18 +125,21 @@ html, body {
 	bottom: 0;
 	padding: 0 4em;
 	height: 120px;
-	font: 12px Arial, Helvetica, sans-serif;
 	background: #3da6bc url('./images/bottom_shade.png') no-repeat center top;
 }
 
 #menu {
-	margin-top: 0.5em;
+	margin: 0.5em 0;
+	padding: 0;
 	list-style-type: none;
+	font: 12px Arial, Helvetica, sans-serif;
 	line-height: 1.5em;
 	color: #a7dae5;
 }
 
 #menu ul {
+	padding: 0;
+	margin: 0 2em 0 0;
 	float: left;
 	list-style-type: none;
 }
@@ -180,7 +183,7 @@ html, body {
 	padding-bottom: 137px;
 }
 .main.small_content { padding-top: 4em; }
-.main.big_content { padding-top: 1em; }
+.main.big_content { padding: 1em 15% 165px; }
 
 .selection_message, .error_message {
 	text-align: center;
@@ -354,6 +357,27 @@ html, body {
 	margin: 0;
 	padding: 0;
 	text-align: center;
+}
+
+.info_message {
+	text-align: left;
+	color: #3DA6BC;
+}
+
+.logo_start {
+	height: 26px;
+	padding-top: 7px;
+	background: url('./images/logo_small-23.png') no-repeat left center;
+	text-indent: 30px;
+}
+
+.content {
+	font-size: 13px;
+	text-align: justify;
+}
+
+.content.big {
+	font-size: 15px;
 }
 
 .selection_image {
