Added profile pages Changed Forgot password Added Settings model Added email notifications

--- a/application/views/scripts/account/forgot-password.phtml
+++ b/application/views/scripts/account/forgot-password.phtml
@@ -1,13 +1,15 @@
 <div class="main big_content">
+	<?php if(!$this->display_message):?>
 	<div class="reg_form">
 
 		<h2>Forgot your password?</h2>
 
-		<form action="" method="post" accept-charset="utf-8">		<p>We will send reset password instructions to the email address associated with your account.</p>
+		<form action="/account/forgot_password" method="post" accept-charset="utf-8">		<p>We will send reset password instructions to the email address associated with your account.</p>
 
 			<p class="input_wrapper center">
 				<label for="forgot_password_username_email">Email</label>:
-				<?php echo $this->form->email; ?>	
+				<?php echo $this->form->email; ?>
+				<?php echo $this->form->key; ?>	
 			</p>
 	
 			<div class="input_wrapper">	
@@ -20,4 +22,12 @@
 
 		</form>	
 	</div>
+	<?php else:?>
+	<div class="main small_content"> 
+		<div class="input_wrapper center"> 
+			<h3>Okay, we've sent the instructions to your email.<br />Go check it!</h3> 
+			<p>You can keep this page open while you're checking your email.<br />If you don't receive the instructions within a minute or two try <a href="/account/forgot_password">Re-sending the instructions</a>!</p>	
+		</div> 
+	</div>
+	<?php endif; ?>
 </div>
