Changed profile bugs

--- a/application/views/scripts/profile/account-password.phtml
+++ b/application/views/scripts/profile/account-password.phtml
@@ -1,3 +1,6 @@
+<?php echo $this->headLink()->appendStylesheet('/css/main.css') ?>
+<?php echo $this->headLink()->appendStylesheet('/css/account.css') ?>
+<?php echo $this->headLink()->appendStylesheet('/css/icons.css') ?>
 <div class="profile_content">
 	<h2>Change password</h2><br /> 
 	<?php if($this->message):?>
