--- a/application/views/scripts/profile/index.phtml
+++ b/application/views/scripts/profile/index.phtml
@@ -1,4 +1,7 @@
-<div style="align:center;margin:0 auto;">
+<?php echo $this->headLink()->appendStylesheet('/css/main.css') ?>
+<?php echo $this->headLink()->appendStylesheet('/css/account.css') ?>
+<?php echo $this->headLink()->appendStylesheet('/css/icons.css') ?>
+<div class="profile_content">
 	<h2>Profile page</h2><br />
 	<p class="center">The information you provide on this page is publicly viewable.</p>
 	<div style="padding:15px 0; text-align: center;">
