--- a/application/views/scripts/pay/creditcard.phtml
+++ b/application/views/scripts/pay/creditcard.phtml
@@ -11,6 +11,7 @@
 			<div class="payment amount-field"><?php echo $this->form->cvv2;?></div>
 
 			<?php echo $this->form->submit; ?>
+			<?php echo $this->form->payment_type;?>
 		</div>
 		</form>
 </div>
