--- a/www/css/paypal.css
+++ b/www/css/paypal.css
@@ -3,6 +3,7 @@ form#payment, .payment.container {
 	margin: 0 auto;
 	width: 500px;
 	text-align: left;
+	padding-top: 20px;
 }
 form#payment label{
 	font-size: 0.9em;
@@ -17,7 +18,8 @@ form#payment ul.errors{
 	margin: 0.2em 0;
 }
 .control.paypal {
-	background: #EFF3F2;
+	background: #D0E7EA;
+	color:#000;
   border: medium none;
   padding: 5px;
 	display: inline;
@@ -25,8 +27,8 @@ form#payment ul.errors{
 }
 .text.paypal {
 	display: block;
-	padding: 0.4em 0 0.2em 40px;
-	font-size:0.9em;
+	padding: 0.2em 0 0.2em 40px;
+	font-size:0.95em;
 }
 #month-element {
 	float: left;
@@ -89,7 +91,7 @@ form#payment ul.errors{
 }
 
 .payment .amount-field {
-	margin-bottom: 10px;
+	margin-bottom: 15px;
 }
 
 .payment.descr {
@@ -128,4 +130,48 @@ ul.errors {
 ul.errors li {
 	text-align: left;
 	padding-left: 200px;
+}
+
+.payment .type-descr {
+	padding-left: 30px;
+	padding-top: 5px;
+	padding-bottom: 5px;
+	font-size: 0.85em;
+}
+
+#payment_type-element label span {
+	font-weight: bold;
+	font-size: 1.05em;
+	color: #575756;
+}
+
+#payment_type-element input[type="radio"]
+{
+	padding-top: 3px;
+}
+
+.type-field {
+	margin-bottom: 25px;
+}
+
+#payment_type-element {
+	margin-top: 20px;
+}
+
+#tenup_amount {
+	font-size: 1.1em;
+}
+
+#tenup_amount option {
+	padding-top: 2px;
+	padding-bottom: 2px;
+}
+
+#month option, #year option {
+	margin-left: 2px;
+}
+
+#cc_amount {
+  font-size: 0.9em;
+    font-weight: bold;
 }
