--- a/www/css/account.css
+++ b/www/css/account.css
@@ -134,3 +134,28 @@ ul.errors li {
 	color: red;
 	font-size: 12px;
 }
+
+/* Styles used by Ext.ux.form.ItemSelector */
+
+.x-form-itemselector-body .x-form-item {
+    margin: 0;
+}
+
+.x-form-itemselector-top {
+    background-image: url('./images/ext/ux/itemselector/top2.gif');
+}
+.x-form-itemselector-up {
+    background-image: url('./images/ext/ux/itemselector/up2.gif');
+}
+.x-form-itemselector-add {
+    background-image: url('./images/ext/ux/itemselector/right2.gif');
+}
+.x-form-itemselector-remove {
+    background-image: url('./images/ext/ux/itemselector/left2.gif');
+}
+.x-form-itemselector-down {
+    background-image: url('./images/ext/ux/itemselector/down2.gif');
+}
+.x-form-itemselector-bottom {
+    background-image: url('./images/ext/ux/itemselector/bottom2.gif');
+}
