create, list and delete load balancers works for amazon instance actions to be fixed

--- a/application/views/scripts/console/index.phtml
+++ b/application/views/scripts/console/index.phtml
@@ -6,28 +6,28 @@
 	</div>
 	
 	<div id="running_instances-details">
-		<h2>Your running instances</h2>
-		<p>This page shows the instances you deployed.</p>
+		<h2>Your running servers</h2>
+		<p>This page shows the servers you deployed and lets you control them.</p>
 	</div>
 	
 	<div id="stopped_instances-details">
-		<h2>Instances that have been stopped</h2>
-		<p>This page shows the instances you deployed.</p>
+		<h2>Servers that have been stopped</h2>
+		<p>This page shows stopped servers. Usually cloud providers do not charge for these. Note that some of the providers (i.e., Rackspace), do not allow stoppeng the server.</p>
 	</div>
 	
 	<div id="terminated_instances-details">
-		<h2>Instances that have previously been terminated</h2>
-		<p>This page shows the instances you deployed.</p>
+		<h2>Servers that have been terminated</h2>
+		<p>This page shows terminated servers. This is just for history of your cloud activity, you cannot do any actions on these.</p>
 	</div>
 	
 	<div id="available_images-details">
 		<h2>Images available for deployment</h2>
-		<p>This page shows the images available for deployment.</p>
+		<p>This page shows the images available for deployment. Right-clicking on the image and selecting "Deploy" will show you the deployment dialogue</p>
 	</div>
 	
 	<div id="snapshots-details">
-		<h2>Snapshots</h2>
-		<p>This page shows the images available for deployment.</p>
+		<h2>Backups</h2>
+		<p>This page shows backups you have created.</p>
 	</div>
 	
 	<div id="load_balancers-details">
