--- a/www/css/main.css
+++ b/www/css/main.css
@@ -160,7 +160,7 @@ html, body {
 	display: block;
 	position: absolute;
 	right: 4em;
-	top: 3em;
+	top: 4em;
 }
 
 #copyright .copyright {
@@ -277,7 +277,7 @@ html, body {
 }
 
 .signed_in_controls {
-	margin: 0.5em 0;
+	/*margin: 0.5em 0;*/
 	text-align: center;
 }
 
@@ -505,4 +505,21 @@ html, body {
 
 #recaptcha_area {
 	margin: 0 auto;
+}
+
+.facebook-like {
+	margin-top: -27px;
+	padding-left: 115px;
+	position: inherit;
+	/*top: 5.7em;
+	right: 7em;*/
+	width: 100px;
+}
+
+.FB_UI_Hidden {
+	width: 90px !important;
+}
+
+.facebook-like .fb_edge_comment_widget {
+	display:none !important;
 }
