--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -113,9 +113,9 @@
 	
 	<div id="footer_icon_hider"></div>
 	<div id="footer" class="clearfix">	
-		<a href="/twitter" class="control social_icon twitter" title="Follow us on Twitter!">Follow us on Twitter!</a>		
-		<a href="/facebook" class="control social_icon facebook" title="We on Facebook">We are on Facebook, Too</a>
-		<a href="/rss" class="control social_icon rss" title="Our Rss feed">Our Rss feed</a>
+		<a href="http://twitter.com/#!/TenBrain" class="control social_icon twitter" title="Follow us on Twitter!">Follow us on Twitter!</a>		
+		<a href="http://www.facebook.com/pages/Tenbrain/147823355290835" class="control social_icon facebook" title="We on Facebook">We are on Facebook, Too</a>
+<!-- 		<a href="/rss" class="control social_icon rss" title="Our Rss feed">Our Rss feed</a> -->
 		<div id="copyright">
 			<span class="copyright">All rights reserved &copy; <?php echo date('Y') ?>, TenBrain</span>
 		</div>
