--- a/application/views/scripts/auth/sign-in.phtml
+++ b/application/views/scripts/auth/sign-in.phtml
@@ -2,7 +2,7 @@
 	<div class="reg_form">
 		<h2>Sign In</h2>
 		<form action="" method="post" accept-charset="utf-8" class="account_form signin">			
-			<h3>Sign in with your TenBrain Account</h3>
+			<h3>Sign in with your TenBrain <br/> Account</h3>
 
 				<p class="input_wrapper">
 					<label for="username">Username/Email</label>				
