--- a/application/views/scripts/pay/details.phtml
+++ b/application/views/scripts/pay/details.phtml
@@ -3,7 +3,7 @@
 	<div>
 		<?php if ($this->details){?>
 			<div class="payment finished">Payment operation sucessfully finished !</div>
-			<div class="payment finished link"><a href="/console">Go to control panel.</a></div>
+			<div class="payment finished link"><a href="http://beta.tenbrain.com/console">Go to control panel.</a></div>
 		<?php }else{?>
 			<div class="payment finished">Payment operation failed. Please check your credit card details and try again.</div>
 			<div class="payment finished link"><a href="/pay">Pay again.</a></div>
